@@ -1,3 +1,10 @@
+Fri Dec  3 04:08:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* encoding.c (enc_alias_internal): use st_insert2 and change return
+	  value to int.
+
+	* encoding.c (enc_alias): follow enc_alias_internal.
+
 Fri Dec  3 01:52:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* encoding.c (enc_alias_internal): use xfree instead of free.
